--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,12 @@
     <string name="app_name">vinyls</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="texto_usuario">Usuario visitante</string>
+    <string name="texto_viniloApp">ViniloApp</string>
+    <string name="texto_visitante">visitante</string>
     <string name="texto_coleccionista">Coleccionista</string>
-    <string name="text_usuario">Usuario visitante</string>
     <string name="text_album_genero">Género</string>
     <string name="text_album_fecha">Fecha</string>
     <string name="text_album_descripcion">Descripción</string>
-
-
+    <string name="text_album">Albumes</string>
+    <string name="text_artista">"Artista</string>
 </resources>
