--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="texto_usuario">VISITANTE</string>
     <string name="texto_coleccionista">COLECCIONISTA</string>
+    <string name="texto_coleccionista_lowcase">Coleccionista</string>
     <string name="text_usuario">VISITANTE</string>
     <string name="text_album_genero">Género</string>
     <string name="text_album_fecha">Fecha</string>
@@ -14,6 +15,8 @@
     <string name="text_artista">"Artista</string>
     <string name="c_mo_deseas_ingresar">¿Cómo deseas ingresar?</string>
     <string name="bienvenid_a">Bienvenid@ a</string>
+    <string name="albums_string">Albumes</string>
+    <string name="crear_album_string">Crear Álbum</string>
 
 
 </resources>
