feature/HU01_09: ajuste de botones, albumList.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="texto_usuario">VISITANTE</string>
     <string name="texto_coleccionista">COLECCIONISTA</string>
     <string name="texto_coleccionista_lowcase">Coleccionista</string>
+    <string name="texto_albumes_lowcase">Albumes</string>
+    <string name="texto_visitante_lowcase">Visitante</string>
     <string name="text_usuario">VISITANTE</string>
     <string name="text_album_genero">Género</string>
     <string name="text_album_fecha">Fecha</string>
@@ -17,6 +19,8 @@
     <string name="bienvenid_a">Bienvenid@ a</string>
     <string name="albums_string">Albumes</string>
     <string name="crear_album_string">Crear Álbum</string>
+    <string name="artistas_string">Artistas</string>
+    <string name="coleccionistas_string">Coleccionistas</string>
 
 
 </resources>
